--- a/template/sign.html
+++ b/template/sign.html
@@ -149,7 +149,7 @@ function validate()
 		{
 			if (response.result)
 			{
-				location.href = "./";
+				location.href = "../template";
 			}
 			else
 			{
