--- a/template/signup.html
+++ b/template/signup.html
@@ -152,7 +152,7 @@ function validate()
 		{
 			if (response.result)
 			{
-				location.href = "./";
+				location.href = "../template";
 			}
 			else
 			{
